--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,7 +2,7 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'my_new_project'
+name: 'sample_dwh_project'
 version: '1.0.0'
 config-version: 2
 
@@ -36,7 +36,12 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 
 models:
-  my_new_project:
+  sample_dwh_project:
     # Applies to all files under models/example/
-    example:
-      +materialized: table
+    stage:
+      +materialized: view
+    temp:
+      materialized: table
+    semantic:
+    materialized: table
+
