--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -39,7 +39,7 @@ models:
   sample_dwh_project:
     # Applies to all files under models/example/
     stage:
-      +materialized: view
+      +materialized: table
     temp: 
       schema: temp
     dwh_target:
